# pformat_macro

./: Cargo.toml  README.md
src/: data.rs  generator.rs  lib.rs  parser.rs
tests/: pformat_args_test.rs
