[package]
name = "pformat_macro"
version = "0.0.1"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.40"
proc-quote = "0.4.0"
syn = { version = "1.0.98", features = ["full"] }