[package]
name = "pformat_macro"
version = "0.0.1"
authors = ["egor-vaskon<egor.vaskonyan@gmail.com>"]
edition = "2021"
description = "Simple format_args!-like macro whose result can be stored for later use"
keywords = ["format", "format_args!", "persistent"]
categories = ["development-tools"]
readme = "README.md"
exclude = [".*", "target", "tests", ".gitignore", "Cargo.lock"]
license = "MIT"
repository = "https://github.com/egor-vaskon/pformat_macro"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.40"
proc-quote = "0.4.0"
syn = { version = "1.0.98", features = ["parsing"] }